--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-react-ts",
+  "name": "electron-react-quickstarter",
   "version": "0.1.0",
   "private": true,
   "main": "electron/main.js",
